Updating the package and the demo gif

--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "dnd",
     "d&d"
   ],
-  "author": "Drew Morris <dmorris@takeflight.io> (http://takeflight.io)",
+  "author": "Drew Morris <dhmorris@gmail.com>",
   "license": "MIT"
 }
