--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "pngjs": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "mocha": "^3.2.0"
+  },
   "scripts": {
     "start": "node ./lib/avataria.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:mocha && npm run test:lint",
+    "test:mocha": "./node_modules/mocha/bin/mocha --reporter spec 'test/**/*.js'",
+    "test:lint": "./node_modules/eslint/bin/eslint.js ."
   },
   "keywords": [
     "avatar",
