--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "genetica": "^0.4.1",
     "pngjs": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.16.1",
+    "eslint": "^5.1.0",
     "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0"
+    "eslint-plugin-import": "^2.13.0",
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "start": "node ./lib/avataria.js",
